# kernel-manager

./: .jimni  Cargo.toml  GUIDLINES.md  README.md  Random.patch  Random_incompatible.patch  build.rs  kernel.list  meson.build
.github/workflows/: cmake.yml  meson.yml
src/: .gitignore  defs.h  get_patches.c  get_patches.cpp  get_patches.h  get_patches.hpp  gz.rs  kernel.rs  main.c  main.h  main.rs
src/ui/: creator.rs  main.rs  mod.rs
src/ui/builder/: kernelbuilder.rs  mod.rs
src/ui/builder/lib/: kernel.rs
src/ui/lib/: kernel.rs  mod.rs
src/ui/utils/: files.rs  gz.rs  mod.rs
src/utils/: files.rs  md5.c  md5.h  mod.rs  patches.rs
src/utils/file_utils/: files.cpp  files.hpp  gz_config.c  gz_config.h
